# Full_stack-Machine_and_deep-Learning

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  quick_test.py  requirements-dev.txt  requirements.txt  setup.py
Pytorch/Tensors/: Tensors.md  data_tutorial.py  tensor_learn.py
setup/: # Setup.md
